--- a/k8s/helm/weatherforecast-api/values.yaml
+++ b/k8s/helm/weatherforecast-api/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: weatherforecast-api
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "1.0"
+  tag: "1.1"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -73,13 +73,21 @@ resources: {}
 
 livenessProbe:
   httpGet:
-    path: /
+    path: /healthz
     port: http
+  initialDelaySeconds: 15
+  periodSeconds: 10
+  timeoutSeconds: 5
+  failureThreshold: 3
 readinessProbe:
   httpGet:
-    path: /
+    path: /healthz
     port: http
-
+  initialDelaySeconds: 5
+  periodSeconds: 10
+  timeoutSeconds: 5
+  successThreshold: 1
+  failureThreshold: 3
 autoscaling:
   enabled: false
   minReplicas: 1
